# meanshift_segmentation_based_on_CUDA

./: .gitignore  CMakeLists.txt  LICENSE  PthreadUnionFind.cpp  README.md  union_find.cpp
doc/: Meanshift算法结构设计.docx  README.md  编码规范.docx  论文规范.docx  项目设计规范.docx
include/: cuda_fake_headers.h  utils.h
include/cuda_flooding/: cuda_flooding.h
include/cuda_ms_filter/: cuda_ms_filter.h
include/cuda_union_find/: cuda_union_find.h
include/union_find/: union_find.h
lib/cimg-2.6.4/html/cimgmenu/: cimgmenu.js
lib/cimg-2.6.4/resources/: CImg.pc
report/: citation.bib  main.tex
report/images/cuda_uf/: uf_1.eps  uf_2.eps  uf_3.eps  uf_4.eps  uf_5.eps  uf_6.eps  uf_7.eps  uf_8.eps
scripts/: test_meanshift.sh  test_union_find.sh
source/cuda_flooding/: CMakeLists.txt  cuda_flooding.cu  cuda_flooding_impl.cu  main.cpp
source/cuda_ms_filter/: CMakeLists.txt  cuda_ms_filter.cu  cuda_ms_filter_impl.cu  main.cpp
source/cuda_push_relabel/: CMakeLists.txt
source/cuda_union_find/: CMakeLists.txt  cuda_union_find.cu  cuda_union_find_impl.cu  main.cpp
source/test_main_prog/: CMakeLists.txt  camera.cpp  image.cpp  visualize.cu  visualize.h
source/union_find/: CMakeLists.txt  main.cpp  union_find.cpp  union_find.h
test/: CMakeLists.txt  meanshift_filter.cpp  meanshift_filter_cmp.cpp  meanshift_filter_gen.cpp  union_find.cpp  union_find_cmp.cpp  union_find_gen.cpp
