set(CMAKE_CXX_STANDARD 14)
#set(CMAKE_BUILD_TYPE Release)
add_executable(meanshift_filter_gen meanshift_filter_gen.cpp)
add_executable(union_find_gen union_find_gen.cpp)
add_executable(meanshift_filter_cmp meanshift_filter_cmp.cpp)
add_executable(union_find_cmp union_find_cmp.cpp)
target_link_libraries(meanshift_filter_gen m pthread X11)
target_link_libraries(union_find_gen m pthread X11)